--- a/src/App.css
+++ b/src/App.css
@@ -154,6 +154,13 @@
   }
 }
 
+body {
+  padding: env(safe-area-inset-top) 
+           env(safe-area-inset-right) 
+           env(safe-area-inset-bottom) 
+           env(safe-area-inset-left);
+}
+
 @keyframes fadeIn {
   from {
     opacity: 0;
